@@ -1,0 +1,9 @@
+package com.kirchnersolutions.PiCenter.constants;
+
+public class RoomConstants {
+
+    public static final String[] rooms = {"bedroom", "livingroom", "serverroom", "office"};
+
+    private RoomConstants(){}
+
+}
