@@ -1,0 +1,13 @@
+package com.kirchnersolutions.PiCenter.constants;
+
+public class StatConstants {
+
+    public static final Long HOUR = new Long(1000 * 60 * 60);
+    public static final Long TWO_HOUR = new Long(1000 * 60 * 60 * 2);
+    public static final Long THREE_HOUR = new Long(1000 * 60 * 60 * 3);
+    public static final Long SIX_HOUR = new Long(1000 * 60 * 60 * 6);
+    public static final Long TWELVE_HOUR = new Long(1000 * 60 * 60 * 12);
+
+    private StatConstants(){};
+
+}
